Added calculation of opacity color for subsurface scattering based on perlin noise

--- a/mandelbulber2/qt/material_editor.ui
+++ b/mandelbulber2/qt/material_editor.ui
@@ -128,9 +128,9 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-3196</y>
+        <y>-3388</y>
         <width>472</width>
-        <height>5073</height>
+        <height>5125</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -4465,7 +4465,7 @@ direction vector:</string>
                <property name="checked">
                 <bool>true</bool>
                </property>
-               <layout class="QGridLayout" name="gridLayout_35" rowstretch="0,0" columnstretch="0,1">
+               <layout class="QGridLayout" name="gridLayout_35" rowstretch="0,0,0" columnstretch="0,1">
                 <property name="leftMargin">
                  <number>2</number>
                 </property>
@@ -4512,17 +4512,55 @@ direction vector:</string>
                   </property>
                  </widget>
                 </item>
-                <item row="0" column="0">
-                 <widget class="QLabel" name="label_60">
-                  <property name="text">
-                   <string>intensity</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="1" column="0" colspan="2">
+                <item row="2" column="0" colspan="2">
                  <widget class="MyCheckBox" name="checkBox_perlin_noise_transparency_color_invert">
                   <property name="text">
                    <string>invert</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="0" column="0">
+                 <widget class="QLabel" name="label_60">
+                  <property name="text">
+                   <string>intensity on surface</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="0">
+                 <widget class="QLabel" name="label_65">
+                  <property name="text">
+                   <string>intensity in volume</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="1">
+                 <widget class="MyDoubleSpinBox" name="spinbox_perlin_noise_transparency_color_intensity_vol">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="toolTip">
+                   <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Contrast of color texture&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                  </property>
+                  <property name="prefix">
+                   <string/>
+                  </property>
+                  <property name="suffix">
+                   <string/>
+                  </property>
+                  <property name="decimals">
+                   <number>2</number>
+                  </property>
+                  <property name="minimum">
+                   <double>0.000000000000000</double>
+                  </property>
+                  <property name="maximum">
+                   <double>1000.000000000000000</double>
+                  </property>
+                  <property name="singleStep">
+                   <double>0.100000000000000</double>
                   </property>
                  </widget>
                 </item>
@@ -4540,7 +4578,7 @@ direction vector:</string>
                <property name="checked">
                 <bool>true</bool>
                </property>
-               <layout class="QGridLayout" name="gridLayout_36" rowstretch="0,0" columnstretch="0,1">
+               <layout class="QGridLayout" name="gridLayout_36" rowstretch="0,0,0" columnstretch="0,1">
                 <property name="leftMargin">
                  <number>2</number>
                 </property>
@@ -4556,6 +4594,20 @@ direction vector:</string>
                 <property name="spacing">
                  <number>2</number>
                 </property>
+                <item row="0" column="0">
+                 <widget class="QLabel" name="label_61">
+                  <property name="text">
+                   <string>intensity on surface</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="2" column="0" colspan="2">
+                 <widget class="MyCheckBox" name="checkBox_perlin_noise_transparency_alpha_invert">
+                  <property name="text">
+                   <string>invert</string>
+                  </property>
+                 </widget>
+                </item>
                 <item row="0" column="1">
                  <widget class="MyDoubleSpinBox" name="spinbox_perlin_noise_transparency_alpha_intensity">
                   <property name="sizePolicy">
@@ -4587,17 +4639,41 @@ direction vector:</string>
                   </property>
                  </widget>
                 </item>
-                <item row="0" column="0">
-                 <widget class="QLabel" name="label_61">
+                <item row="1" column="0">
+                 <widget class="QLabel" name="label_66">
                   <property name="text">
-                   <string>intensity</string>
+                   <string>intensity in volume</string>
                   </property>
                  </widget>
                 </item>
-                <item row="1" column="0" colspan="2">
-                 <widget class="MyCheckBox" name="checkBox_perlin_noise_transparency_alpha_invert">
-                  <property name="text">
-                   <string>invert</string>
+                <item row="1" column="1">
+                 <widget class="MyDoubleSpinBox" name="spinbox_perlin_noise_transparency_alpha_intensity_vol">
+                  <property name="sizePolicy">
+                   <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+                    <horstretch>0</horstretch>
+                    <verstretch>0</verstretch>
+                   </sizepolicy>
+                  </property>
+                  <property name="toolTip">
+                   <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Contrast of color texture&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                  </property>
+                  <property name="prefix">
+                   <string/>
+                  </property>
+                  <property name="suffix">
+                   <string/>
+                  </property>
+                  <property name="decimals">
+                   <number>2</number>
+                  </property>
+                  <property name="minimum">
+                   <double>0.000000000000000</double>
+                  </property>
+                  <property name="maximum">
+                   <double>1000.000000000000000</double>
+                  </property>
+                  <property name="singleStep">
+                   <double>0.100000000000000</double>
                   </property>
                  </widget>
                 </item>
