transf_box_fold4d_infy fffff

--- a/mandelbulber2/formula/ui/transf_box_fold4d_infy.ui
+++ b/mandelbulber2/formula/ui/transf_box_fold4d_infy.ui
@@ -39,7 +39,7 @@
    <item>
     <widget class="QLabel" name="label_76">
      <property name="text">
-      <string>standard box tiling (3D, plus 4D option)</string>
+      <string>box tiling with folding, if T&gt;box tiling4D produces same image use that one as it is faster</string>
      </property>
     </widget>
    </item>
