abox_mod1.cl rPoe iter controls,
sphereFldPara fix,
mbxVaryScale4 add missing checkbox

reinstate  min dist bailout in cpp, TEMP

--- a/mandelbulber2/formula/ui/transf_spherical_fold_parab.ui
+++ b/mandelbulber2/formula/ui/transf_spherical_fold_parab.ui
@@ -792,6 +792,13 @@ offset:</string>
           </widget>
          </item>
          <item>
+          <widget class="MyCheckBox" name="checkBox_transf_function_enabledY_false">
+           <property name="text">
+            <string>mode 2</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <layout class="QGridLayout" name="gridLayout_19" columnstretch="0,1">
            <property name="spacing">
             <number>2</number>
