--- a/mandelbulber2/formula/ui/transf_juliabox_v2.ui
+++ b/mandelbulber2/formula/ui/transf_juliabox_v2.ui
@@ -822,7 +822,7 @@ offset:</string>
         <property name="checkable">
          <bool>true</bool>
         </property>
-        <layout class="QVBoxLayout" name="verticalLayout_15" stretch="0">
+        <layout class="QVBoxLayout" name="verticalLayout_15" stretch="0,0">
          <property name="spacing">
           <number>2</number>
          </property>
@@ -839,6 +839,56 @@ offset:</string>
           <number>2</number>
          </property>
          <item>
+          <layout class="QHBoxLayout" name="horizontalLayout_10" stretch="0,1,0,1">
+           <item>
+            <widget class="QLabel" name="label_96">
+             <property name="text">
+              <string>start at iteration:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="MySpinBox" name="spinboxInt_transf_start_iterations">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="minimum">
+              <number>0</number>
+             </property>
+             <property name="maximum">
+              <number>999</number>
+             </property>
+             <property name="value">
+              <number>0</number>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_68">
+             <property name="text">
+              <string>stop at iteration:</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="maximum">
+              <number>999</number>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </item>
+         <item>
           <layout class="QGridLayout" name="gridLayout_30" columnstretch="0,1">
            <property name="spacing">
             <number>2</number>
@@ -846,19 +896,12 @@ offset:</string>
            <item row="0" column="0">
             <widget class="QLabel" name="label_145">
              <property name="text">
-              <string>scale VaryA:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_150">
-             <property name="text">
-              <string>vary offset:</string>
+              <string>vary v1</string>
              </property>
             </widget>
            </item>
            <item row="0" column="1">
-            <widget class="MyDoubleSpinBox" name="spinbox_transf_scale_vary_0">
+            <widget class="MyDoubleSpinBox" name="spinbox_transf_offset_0">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
                <horstretch>0</horstretch>
@@ -875,38 +918,10 @@ offset:</string>
               <number>6</number>
              </property>
              <property name="minimum">
-              <double>-99.989999999999995</double>
+              <double>-99.000000000000000</double>
              </property>
              <property name="maximum">
-              <double>99.989999999999995</double>
-             </property>
-             <property name="singleStep">
-              <double>0.010000000000000</double>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="MyDoubleSpinBox" name="spinbox_transf_scaleC_1">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="prefix">
-              <string/>
-             </property>
-             <property name="suffix">
-              <string/>
-             </property>
-             <property name="decimals">
-              <number>6</number>
-             </property>
-             <property name="minimum">
-              <double>-99.989999999999995</double>
-             </property>
-             <property name="maximum">
-              <double>99.989999999999995</double>
+              <double>99.000000000000000</double>
              </property>
              <property name="singleStep">
               <double>0.100000000000000</double>
@@ -2099,12 +2114,12 @@ offset:</string>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>36</x>
-     <y>562</y>
+     <x>39</x>
+     <y>131</y>
     </hint>
     <hint type="destinationlabel">
-     <x>211</x>
-     <y>564</y>
+     <x>283</x>
+     <y>133</y>
     </hint>
    </hints>
   </connection>
