--- a/mandelbulber2/formula/ui/pseudo_kleinian.ui
+++ b/mandelbulber2/formula/ui/pseudo_kleinian.ui
@@ -1143,6 +1143,90 @@ offset</string>
        <number>2</number>
       </property>
       <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_22" stretch="0,1,0,1">
+        <item>
+         <widget class="QLabel" name="label_108">
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="text">
+           <string>start at iteration:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_C">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="minimum">
+           <number>0</number>
+          </property>
+          <property name="maximum">
+           <number>999</number>
+          </property>
+          <property name="value">
+           <number>0</number>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="label_78">
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="text">
+           <string>stop at iteration:</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_C">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="font">
+           <font>
+            <weight>50</weight>
+            <bold>false</bold>
+           </font>
+          </property>
+          <property name="maximum">
+           <number>999</number>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
+       <widget class="MyCheckBox" name="checkBox_transf_function_enabledN_false">
+        <property name="layoutDirection">
+         <enum>Qt::LeftToRight</enum>
+        </property>
+        <property name="text">
+         <string notr="true">flip z.z (avoid color cuts, slower)</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <layout class="QGridLayout" name="gridLayout_71" columnstretch="0,0,1">
         <property name="spacing">
          <number>2</number>
@@ -1987,7 +2071,7 @@ offset</string>
         <item row="3" column="1">
          <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_w">
           <property name="enabled">
-           <bool>false</bool>
+           <bool>true</bool>
           </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -2316,6 +2400,16 @@ offset</string>
           </layout>
          </item>
          <item>
+          <widget class="MyCheckBox" name="checkBox_transf_function_enabledAx_false">
+           <property name="layoutDirection">
+            <enum>Qt::LeftToRight</enum>
+           </property>
+           <property name="text">
+            <string>dot xy</string>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="MyGroupBox" name="groupCheck_transf_function_enabledA_false">
            <property name="font">
             <font>
@@ -2464,16 +2558,6 @@ offset</string>
              </layout>
             </item>
            </layout>
-          </widget>
-         </item>
-         <item>
-          <widget class="MyCheckBox" name="checkBox_transf_function_enabledAx_false">
-           <property name="layoutDirection">
-            <enum>Qt::LeftToRight</enum>
-           </property>
-           <property name="text">
-            <string>dot</string>
-           </property>
           </widget>
          </item>
          <item>
@@ -2770,22 +2854,6 @@ offset</string>
     <hint type="destinationlabel">
      <x>456</x>
      <y>667</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>groupCheck_fold_color_aux_color_enabledA_false</sender>
-   <signal>toggled(bool)</signal>
-   <receiver>spinbox4_fold_color_difs_0000_w</receiver>
-   <slot>setEnabled(bool)</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>14</x>
-     <y>1473</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>196</x>
-     <y>1446</y>
     </hint>
    </hints>
   </connection>
