--- a/mandelbulber2/formula/ui/pseudo_kleinian_mod1.ui
+++ b/mandelbulber2/formula/ui/pseudo_kleinian_mod1.ui
@@ -2067,6 +2067,16 @@
        <number>2</number>
       </property>
       <item>
+       <widget class="MyCheckBox" name="checkBox_transf_function_enabledN_false">
+        <property name="layoutDirection">
+         <enum>Qt::LeftToRight</enum>
+        </property>
+        <property name="text">
+         <string notr="true">flip z.z (avoid color cuts, slower)</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <layout class="QGridLayout" name="gridLayout_71" columnstretch="0,0,1">
         <property name="spacing">
          <number>2</number>
