--- a/mandelbulber2/formula/ui/jos_kleinian.ui
+++ b/mandelbulber2/formula/ui/jos_kleinian.ui
@@ -455,6 +455,19 @@ offset:</string>
     </widget>
    </item>
    <item>
+    <widget class="QLabel" name="label_258">
+     <property name="font">
+      <font>
+       <weight>50</weight>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Kleinian</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <layout class="QHBoxLayout" name="horizontalLayout_22" stretch="0,1,0,1">
      <item>
       <widget class="QLabel" name="label_108">
@@ -907,6 +920,13 @@ offset:</string>
       </widget>
      </item>
     </layout>
+   </item>
+   <item>
+    <widget class="QLabel" name="label_34">
+     <property name="text">
+      <string>Color</string>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="MyCheckBox" name="checkBox_fold_color_aux_color_enabled">
